# Rustic

./: Cargo.toml  README.md
src/: main.rs  mod.rs
src/apis/: mod.rs
src/apis/base/: config.rs  mod.rs
src/apis/domains/status/: health.rs  mod.rs
