[package]
name = "rustic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
serde = { version = "1.0.193", features = [] }
serde_json = { version = "1.0.108", features = [] }
tokio = {  version = "1.34.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0" , features = ["trace"] }
tracing-subscriber = "0.3.18"
config = "0.13.4"
tracing = "0.1.40"

